Fixed several alignment related issues in homepage and removed some hacks

--- a/src/components/HeroSection/styles.module.css
+++ b/src/components/HeroSection/styles.module.css
@@ -1,7 +1,7 @@
 .heroSectionWrapper {
   display: flex;
   align-items: center;
-  height: 100%;
+  height: 100vh;
 }
 
 .innerContainer {
@@ -11,11 +11,11 @@
 .heroTextContainer {
   display: flex;
   align-items: center;
-  margin-top: -8vw;
 }
 
 h1 {
   font-size: min(max(1rem, 6vw), 160px);
+  line-height: min(max(1rem, 6vw), 160px);
   font-family: 'Manjari', sans-serif;
   margin-bottom: 0;
   margin-top: 0;
@@ -23,7 +23,6 @@ h1 {
 
 p {
   font-size: min(max(1rem, 1.0vw), 24px);
-  margin-top: -1.8vw;
 }
 
 .arrowRight {
