--- a/src/components/SocialIcons/styles.module.css
+++ b/src/components/SocialIcons/styles.module.css
@@ -1,7 +1,7 @@
 .socialIconsWrapper {
   padding: 10px 0;
   display: flex;
-  position: fixed;
+  position: absolute;
   bottom: 120px;
 }
 
