--- a/src/components/Topbar/styles.module.css
+++ b/src/components/Topbar/styles.module.css
@@ -1,3 +1,10 @@
 .wrapper {
   padding-top: 80px;
+  position: fixed;
+  top:0;
+  left:0;
+  width: 100%;
+  max-width: 2560px;
+  padding: 0 6vw;
+  top: 80px;
 }
